# GladosRoboticBot

./: .env  .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
src/: aichat.py  config.py  handlers.py  main.py
