[project]
name = "gladosbotrobotic"
version = "0.1.0"
description = ""
authors = [
    {name = "sapdotten"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "deeperseek @ git+https://github.com/Sapdotten/DeeperSeek.git",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
